# CS839

./: .gitignore  CMakeLists.txt  Readme.md
src/Demos/: CMakeLists.txt  Readme.md
src/Demos/Finite-Element-Tests/: CMakeLists.txt
src/Demos/Finite-Element-Tests/MembranePinch1/: CMakeLists.txt
src/Demos/Finite-Element-Tests/MembranePinch2/: CMakeLists.txt  main.cpp
src/Demos/Finite-Element-Tests/MembranePinch3/: CMakeLists.txt
src/Demos/Finite-Element-Tests/MembranePinch4/: AnimatedMesh.h  CMakeLists.txt
src/Demos/Finite-Element-Tests/MembranePinch5/: CMakeLists.txt
src/Demos/Finite-Element-Tests/MembranePinch6/: CMakeLists.txt
src/Demos/Finite-Element-Tests/MembraneStretch1/: CMakeLists.txt
src/Demos/Finite-Element-Tests/MembraneStretch2/: CMakeLists.txt
src/Demos/Finite-Element-Tests/MembraneStretch3/: CMakeLists.txt
src/Demos/Finite-Element-Tests/MembraneStretchPD/: CMakeLists.txt
src/Demos/Intro/: CMakeLists.txt
src/Demos/Intro/USDtoOBJ/: CMakeLists.txt  main.cpp
src/Demos/Intro/animateAttribute/: CMakeLists.txt  main.cpp
src/Demos/Intro/helloWorld/: CMakeLists.txt  main.cpp
src/Demos/Simple-Deformations/latticeMesh/: CMakeLists.txt
src/Demos/Simple-Deformations/latticeMeshBoundary/: CMakeLists.txt
src/Demos/Simple-Deformations/latticeMeshBoundaryRelaxation/: CMakeLists.txt
src/Demos/Simple-Deformations/latticeMeshElasticityTest1/: CMakeLists.txt
src/Demos/Simple-Deformations/latticeMeshElasticityTest2/: CMakeLists.txt
src/Demos/Simple-Deformations/latticeMeshElasticityTest3/: CMakeLists.txt
src/Demos/Simple-Deformations/latticeMeshElasticityTest4/: CMakeLists.txt
src/Demos/Simple-Deformations/quadFacedCube/: CMakeLists.txt
src/HWs/: CMakeLists.txt  Readme.md
src/HWs/Commons/: CMakeLists.txt
src/HWs/Commons/include/: Animesh.hpp  HWIncludes.hpp  MeshLoader.hpp  SceneControl.hpp
src/HWs/Commons/src/: MeshLoader.cpp  dummy.cpp
src/HWs/HW1-RubberCube/: CMakeLists.txt  main.cpp  physics.hpp
src/HWs/HW1-RubberTetrahedron/: CMakeLists.txt  main.cpp
src/HWs/HW2-RubberBunny/: BackwardEuler.hpp  CMakeLists.txt  LatticeFEM.cpp  LatticeFEM.hpp  cgConfig.hpp  cuCG.cc  cuCG.cu  cuCG.hpp  main.cpp
src/HWs/HW2-RubberCube/: LatticeFEM.cpp  LatticeFEM.hpp
src/HWs/HW3-RubberBunny/: CMakeLists.txt  SoftSim.h  SolverInterface.cu  SolverInterface.h  main.cc
src/HWs/HW3-RubberBunny/FEM/: CG.cu  CG.h  FEM.h  Internals.h  SVD.cu  SVD.h  Solver.cu  Solver.h  ThrustUtils.h  Utils.cu
src/HWs/HW3-RubberBunny/Lattice/: AABB.h  Collider.h  CubicLattice.h  Lattice.h
